recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:3: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return(0)
           ^Tree:3: warning: enclosing method tree has result type Unit: return value discarded
    return(0)
    ^Tree:6: error: not found: value rigth
  rigth(angle)
  ^